merged JDK 1.2 branch